[tool.poetry]
name = "Delphi"
version = "0.1.0"
description = "A Dodona clone"
authors = [
    "Mathieu Strypsteen <mathieu.strypsteen@ugent.be>",
    "Albéric Loos <alberic.loos@ugent.be>",
    "Emma Vandewalle <emma.vandewalle@ugent.be>",
    "Lukas Barragan Torres <lukas.barragantorres@ugent.be>",
    "Matthias Seghers< matthias.seghers@ugent.be>",
    "Robbe Van de Keere <robbe.vandekeere@ugent.be>",
    "Ruben Vandamme <ruben.vandamme@ugent.be>",
    "Stef Ossé <stef.osse@ugent.be>"
]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
ruff = "^0.3.4"
python-multipart = "^0.0.9"
pyright = "^1.1.356"
pyjwt = "^2.8.0"
psycopg2-binary = "^2.9.9"
pre-commit = "^3.7.0"
fastapi = "^0.110.0"
email-validator = "^2.1.1"
httpx = "^0.27.0"
defusedxml = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [
    ".venv",
    "venv"
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py312"


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D", # Docstrings
    "ANN101", # type annotation for self
    "ARG001",
    "S201",   # Use of `debug=True` in Flask app detected
    "INP001", # File `...` is part of an implicit namespace package
    "S101",   # is nodig voor de testen
    "TCH001", # Move application import `...` into a type-checking block (dit is enkel voor performance)
    "RUF009",  # Do not perform function call `...` in dataclass defaults but needed for sql alchemy
    "PLR0913", # Too many arguments in function
    "FBT001", # Boolean-typed positional argument in function dfinition
    "FBT002",
    "B008",
    "PT009",
    "PT027",
    "FBT003",
    "DTZ005",
    "ANN204", # Init function of object should not need return type annotation.
    "PTH123"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"



[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
